# whatsapp-transcriber

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
utils/: gpu.py  monitor.py
