[project]
name = "whatsapp-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "psutil>=7.0.0",
    "torch>=2.8.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper" }
